feat: adicionado configurações do banco de dados e ORM JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.application.name=CadastroUsuario
+
+spring.datasource.url=jdbc:h2:~/test; DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=cadastro_usuario
+spring.datasource.password=cadastro_usuario
+
+#Configurações do JPA
+#inforque que ele vai se auto atualizar
+spring.jpa.hibernate.ddl-auto=update
+#mostra as tabelas
+spring.jpa.show-sql=true
+#mostra alterações no console
 spring.h2.console.enabled=true
