--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=CadastroUsuario
 
-spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=cadastro_usuario
-spring.datasource.password=cadastro_usuario
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 #Configurações do JPA
 #inforque que ele vai se auto atualizar
