--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=CadastroUsuario
 
+#Conexão Banco de Dados
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=${DATABASE_USERNAME}
@@ -12,3 +13,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #mostra alterações no console
 spring.h2.console.enabled=true
+
+#Configurar o flyway
+#ativa o flyway
+spring.flyway.enabled=true
+#passa caminho onde o flyway vai atuar
+spring.flyway.locations=classpath:db/migrations
+#informa que é para fazer as migrações para a tabela já existente
+spring.flyway.baseline-on-migrate=true
